--- a/messaging_app/messaging_app/deployment.yaml
+++ b/messaging_app/messaging_app/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: django-messaging
+      # Built using DockerBuild Image
         image: your-django-image:latest
         ports:
         - containerPort: 8000
