--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -11,8 +11,8 @@ pipeline {
       steps {
         sh '''
           python -m pip install --upgrade pip || true
-          if [ -f requirements.txt ]; then
-            pip3 install -r requirements.txt
+          if [ -f messaging_app/requirements.txt ]; then
+            pip3 install -r messaging_app/requirements.txt
           else
             pip3  install pytest
           fi
