added env_Variables  & Docker Build  & Docker push to jenkinsfile

--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
   agent any
+   environment {
+    DOCKERHUB_REPO = 'ashrafmagdy92/alx-repo'
+    IMAGE_TAG = "messaging-app"
+  }
+  
   stages {
     stage('Checkout') {
       steps {
@@ -9,7 +14,8 @@ pipeline {
     }
     stage('Test') {
       steps {
-        sh '''
+        dir('messaging_app'){
+          sh '''
           python -m pip install --upgrade pip || true
           if [ -f messaging_app/requirements.txt ]; then
             pip3 install -r messaging_app/requirements.txt
@@ -17,13 +23,40 @@ pipeline {
             pip3  install pytest
           fi
           pytest --junitxml=pytest.xml
+          '''
+          }
+      }
+    }
+    stage('Docker Build') {
+      steps {
+        // Build using Dockerfile inside messaging_app/
+        sh '''
+          docker build -t ${DOCKERHUB_REPO}:${IMAGE_TAG} -f messaging_app/Dockerfile messaging_app
         '''
       }
     }
+     stage('Docker Push') {
+      steps {
+        withCredentials([usernamePassword(credentialsId: 'dockerhub-creds',
+                                          usernameVariable: 'DOCKERHUB_USER',
+                                          passwordVariable:  'DOCKERHUB_PASS')]) {
+          sh '''
+            echo "${DOCKERHUB_PASS}" | docker login -u "${DOCKERHUB_USER}" --password-stdin
+            docker push ${DOCKERHUB_REPO}:${IMAGE_TAG}
+            docker tag  ${DOCKERHUB_REPO}:${IMAGE_TAG} ${DOCKERHUB_REPO}:latest
+            docker push ${DOCKERHUB_REPO}:latest
+          '''
+        }
+      }
+    }
+  
+
   }
   post {
     always {
       junit 'pytest.xml'
     }
+    success { echo "✅ Image pushed: ${DOCKERHUB_REPO}:${IMAGE_TAG}" }
+    failure { echo "❌ Build failed. Check logs and test report." }
   }
 }
