--- a/messaging_app/messaging_app/.github/workflows/ci.yml
+++ b/messaging_app/messaging_app/.github/workflows/ci.yml
@@ -38,11 +38,26 @@ jobs:
           python-version: "3.11"
 
       - run: |
-          sudo apt-get update
+         sudo apt-get update
           sudo apt-get install -y default-libmysqlclient-dev
           python -m pip install --upgrade pip
-          pip install -r requirements.txt || pip install django pytest mysqlclient
+          pip install -r requirements.txt || pip install django pytest mysqlclient flake8 coverage
+          
+      - name: Run flake8 (lint check)
+        run: |
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-      - run: |
-          python manage.py migrate --noinput
-          pytest -q || python manage.py test
+      # 🔹 Run tests with coverage
+      - name: Run tests with coverage
+        run: |
+          coverage run manage.py test
+          coverage xml
+          coverage report -m
+
+      # 🔹 Upload coverage report artifact
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.xml
